@@ -5,34 +5,26 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.boot.test.mock.mockito.SpyBean;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import uk.gov.hmcts.darts.arm.api.ArmDataManagementApi;
 import uk.gov.hmcts.darts.arm.component.ArchiveRecordFileGenerator;
-import uk.gov.hmcts.darts.arm.config.ArmDataManagementConfiguration;
 import uk.gov.hmcts.darts.arm.config.UnstructuredToArmProcessorConfiguration;
 import uk.gov.hmcts.darts.arm.helper.DataStoreToArmHelper;
 import uk.gov.hmcts.darts.arm.mapper.MediaArchiveRecordMapper;
-import uk.gov.hmcts.darts.arm.service.ArchiveRecordService;
-import uk.gov.hmcts.darts.arm.service.ExternalObjectDirectoryService;
 import uk.gov.hmcts.darts.arm.service.UnstructuredToArmBatchProcessor;
 import uk.gov.hmcts.darts.authorisation.component.UserIdentity;
 import uk.gov.hmcts.darts.common.entity.ExternalObjectDirectoryEntity;
 import uk.gov.hmcts.darts.common.entity.MediaEntity;
 import uk.gov.hmcts.darts.common.entity.UserAccountEntity;
 import uk.gov.hmcts.darts.common.exception.DartsException;
-import uk.gov.hmcts.darts.common.repository.ExternalLocationTypeRepository;
 import uk.gov.hmcts.darts.common.repository.ExternalObjectDirectoryRepository;
-import uk.gov.hmcts.darts.common.repository.ObjectRecordStatusRepository;
-import uk.gov.hmcts.darts.common.service.FileOperationService;
 import uk.gov.hmcts.darts.common.util.EodHelper;
-import uk.gov.hmcts.darts.datamanagement.api.DataManagementApi;
 import uk.gov.hmcts.darts.log.api.LogApi;
 import uk.gov.hmcts.darts.testutils.IntegrationBase;
-import uk.gov.hmcts.darts.testutils.stubs.AuthorisationStub;
 import uk.gov.hmcts.darts.testutils.stubs.ExternalObjectDirectoryStub;
 
-import java.io.IOException;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -40,8 +32,9 @@ import static java.lang.String.format;
 import static java.time.temporal.ChronoUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.within;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
@@ -54,8 +47,10 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.darts.common.enums.ExternalLocationTypeEnum.ARM;
 import static uk.gov.hmcts.darts.common.enums.ExternalLocationTypeEnum.UNSTRUCTURED;
+import static uk.gov.hmcts.darts.common.enums.ObjectRecordStatusEnum.ARM_INGESTION;
 import static uk.gov.hmcts.darts.common.enums.ObjectRecordStatusEnum.ARM_MANIFEST_FAILED;
 import static uk.gov.hmcts.darts.common.enums.ObjectRecordStatusEnum.ARM_RAW_DATA_FAILED;
+import static uk.gov.hmcts.darts.common.enums.ObjectRecordStatusEnum.ARM_RAW_DATA_PUSHED;
 import static uk.gov.hmcts.darts.common.enums.ObjectRecordStatusEnum.ARM_RESPONSE_MANIFEST_FAILED;
 import static uk.gov.hmcts.darts.common.enums.ObjectRecordStatusEnum.STORED;
 
@@ -64,48 +59,28 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
     ArgumentCaptor<String> manifestFileNameCaptor = ArgumentCaptor.forClass(String.class);
 
-    @SpyBean
+    @MockitoSpyBean
     private ArmDataManagementApi armDataManagementApi;
-
-    @Autowired
-    private ExternalObjectDirectoryRepository externalObjectDirectoryRepository;
-    @Autowired
-    private ObjectRecordStatusRepository objectRecordStatusRepository;
-    @Autowired
-    private ExternalLocationTypeRepository externalLocationTypeRepository;
-    @SpyBean
-    private DataManagementApi dataManagementApi;
-    @MockBean
+    @MockitoBean
     private UserIdentity userIdentity;
     @Autowired
-    private ArmDataManagementConfiguration armDataManagementConfiguration;
-    @SpyBean
-    private FileOperationService fileOperationService;
-    @SpyBean
-    private ArchiveRecordService archiveRecordService;
-    @Autowired
-    private AuthorisationStub authorisationStub;
-    @Autowired
     private ExternalObjectDirectoryStub externalObjectDirectoryStub;
-    @SpyBean
+    @MockitoSpyBean
     private ArchiveRecordFileGenerator archiveRecordFileGenerator;
     @Autowired
     private ExternalObjectDirectoryRepository eodRepository;
-    @SpyBean
+    @MockitoSpyBean
     private MediaArchiveRecordMapper mediaArchiveRecordMapper;
-    @SpyBean
+    @MockitoSpyBean
     private DataStoreToArmHelper dataStoreToArmHelper;
 
-    @MockBean
+    @MockitoBean
     private UnstructuredToArmProcessorConfiguration unstructuredToArmProcessorConfiguration;
     private UserAccountEntity testUser;
     private static final Integer BATCH_SIZE = 5;
 
     @Autowired
     private LogApi logApi;
-
-    @Autowired
-    private ExternalObjectDirectoryService eodService;
 
     @Autowired
     private UnstructuredToArmBatchProcessor unstructuredToArmProcessor;
@@ -116,6 +91,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
         when(userIdentity.getUserAccount()).thenReturn(testUser);
         when(unstructuredToArmProcessorConfiguration.getMaxArmManifestItems()).thenReturn(5);
         when(unstructuredToArmProcessorConfiguration.getThreads()).thenReturn(20);
+        when(unstructuredToArmProcessorConfiguration.getAsyncTimeout()).thenReturn(Duration.ofMinutes(5));
     }
 
     @Test
@@ -126,7 +102,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
 
         // skipped
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
 
         // processed
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
@@ -145,7 +121,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //then
         var foundMediaList = eodRepository.findMediaIdsByInMediaIdStatusAndType(
-            List.of(medias.get(0).getId(),
+            List.of(medias.getFirst().getId(),
                     medias.get(1).getId(),
                     medias.get(2).getId(),
                     medias.get(3).getId(),
@@ -155,10 +131,8 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
             EodHelper.armLocation()
         );
         assertThat(foundMediaList.size()).isEqualTo(BATCH_SIZE);
-        assertThat(
-            eodRepository.findMediaIdsByInMediaIdStatusAndType(List.of(medias.get(0).getId()), EodHelper.storedStatus(), EodHelper.unstructuredLocation())
-        )
-            .hasSize(1);
+        assertThat(eodRepository.findMediaIdsByInMediaIdStatusAndType(
+            List.of(medias.getFirst().getId()), EodHelper.storedStatus(), EodHelper.unstructuredLocation())).hasSize(1);
     }
 
     @Test
@@ -171,7 +145,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
 
         // skipped
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
 
         // processed
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
@@ -190,7 +164,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //then
         var foundMediaList = eodRepository.findMediaIdsByInMediaIdStatusAndType(
-            List.of(medias.get(0).getId(),
+            List.of(medias.getFirst().getId(),
                     medias.get(1).getId(),
                     medias.get(2).getId(),
                     medias.get(3).getId(),
@@ -201,7 +175,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
         );
         assertThat(foundMediaList.size()).isEqualTo(5);
         assertThat(
-            eodRepository.findMediaIdsByInMediaIdStatusAndType(List.of(medias.get(0).getId()), EodHelper.storedStatus(), EodHelper.unstructuredLocation())
+            eodRepository.findMediaIdsByInMediaIdStatusAndType(List.of(medias.getFirst().getId()), EodHelper.storedStatus(), EodHelper.unstructuredLocation())
         )
             .hasSize(1);
     }
@@ -216,7 +190,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
 
         // skipped
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
 
         // processed
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
@@ -235,7 +209,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //then
         var foundMediaList = eodRepository.findMediaIdsByInMediaIdStatusAndType(
-            List.of(medias.get(0).getId(),
+            List.of(medias.getFirst().getId(),
                     medias.get(1).getId(),
                     medias.get(2).getId(),
                     medias.get(3).getId(),
@@ -246,31 +220,30 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
         );
         assertThat(foundMediaList.size()).isEqualTo(3);
         assertThat(
-            eodRepository.findMediaIdsByInMediaIdStatusAndType(List.of(medias.get(0).getId()), EodHelper.storedStatus(), EodHelper.unstructuredLocation())
+            eodRepository.findMediaIdsByInMediaIdStatusAndType(List.of(medias.getFirst().getId()), EodHelper.storedStatus(), EodHelper.unstructuredLocation())
         )
             .hasSize(1);
     }
 
     @Test
-    void testBatchedQueryWhereSomeFailedToPush() throws IOException {
+    void testBatchedQueryWhereSomeFailedToPush() {
 
         //given
         //batch size is 5
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
 
-        var eod1 = externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
+        var eod1 = externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
         var eod3 = externalObjectDirectoryStub.createAndSaveEod(medias.get(2), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(3), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(4), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(5), STORED, UNSTRUCTURED);
 
-
         DartsException dartsException = new DartsException("Exception copying file");
-        String failedFilename1 = format("^%s.*", 7, eod1.getMedia().getId(), eod1.getTransferAttempts());
+        String failedFilename1 = format("^%s_%s_%s.*", 7, eod1.getMedia().getId(), eod1.getTransferAttempts());
         doThrow(dartsException).when(armDataManagementApi).copyBlobDataToArm(any(), matches(failedFilename1));
 
-        String failedFilename3 = format("^%s.*", 9, eod3.getMedia().getId(), eod3.getTransferAttempts());
+        String failedFilename3 = format("^%s_%s_%s.*", 9, eod3.getMedia().getId(), eod3.getTransferAttempts());
         doThrow(dartsException).when(armDataManagementApi).copyBlobDataToArm(any(), matches(failedFilename3));
 
         //when
@@ -278,7 +251,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //then
         List<Integer> foundMediaList = eodRepository.findMediaIdsByInMediaIdStatusAndType(
-            List.of(medias.get(0).getId(),
+            List.of(medias.getFirst().getId(),
                     medias.get(1).getId(),
                     medias.get(2).getId(),
                     medias.get(3).getId(),
@@ -289,12 +262,12 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
         );
         assertThat(foundMediaList.size()).isEqualTo(3);
         assertThat(
-            eodRepository.findMediaIdsByInMediaIdStatusAndType(List.of(medias.get(0).getId()), EodHelper.storedStatus(), EodHelper.unstructuredLocation())
+            eodRepository.findMediaIdsByInMediaIdStatusAndType(List.of(medias.getFirst().getId()), EodHelper.storedStatus(), EodHelper.unstructuredLocation())
         ).hasSize(1);
 
 
         List<Integer> failedMediaList = eodRepository.findMediaIdsByInMediaIdStatusAndType(
-            List.of(medias.get(0).getId(),
+            List.of(medias.getFirst().getId(),
                     medias.get(1).getId(),
                     medias.get(2).getId(),
                     medias.get(3).getId(),
@@ -332,40 +305,39 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
         assertTrue(successEods.stream().allMatch(eodEntity -> manifestFileContents.contains(
             format("\"relation_id\":\"%d\"", eodEntity.getId())
         )));
-        assertTrue(failedEods.stream().allMatch(eodEntity -> !manifestFileContents.contains(
+        assertTrue(failedEods.stream().noneMatch(eodEntity -> manifestFileContents.contains(
             format("\"relation_id\":\"%d\"", eodEntity.getId())
         )));
 
     }
 
     @Test
-    void movePendingMediaDataFromUnstructuredToArmStorage() throws IOException {
+    void movePendingMediaDataFromUnstructuredToArmStorage() {
 
         //given
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
 
         //when
         unstructuredToArmProcessor.processUnstructuredToArm(5);
 
         //then
-        List<ExternalObjectDirectoryEntity> armDropZoneEodsMedia0 = eodRepository.findByMediaStatusAndType(medias.get(0), EodHelper.armDropZoneStatus(),
+        List<ExternalObjectDirectoryEntity> armDropZoneEodsMedia0 = eodRepository.findByMediaStatusAndType(medias.getFirst(), EodHelper.armDropZoneStatus(),
                                                                                                            EodHelper.armLocation());
         assertThat(armDropZoneEodsMedia0).hasSize(1);
         List<ExternalObjectDirectoryEntity> armDropZoneEodsMedia1 = eodRepository.findByMediaStatusAndType(medias.get(1), EodHelper.armDropZoneStatus(),
                                                                                                            EodHelper.armLocation());
         assertThat(armDropZoneEodsMedia1).hasSize(1);
 
-        var rawFile0Name = format("%d_%d_1", armDropZoneEodsMedia0.get(0).getId(), medias.get(0).getId());
-        var rawFile1Name = format("%d_%d_1", armDropZoneEodsMedia1.get(0).getId(), medias.get(1).getId());
+        var rawFile0Name = format("%d_%d_1", armDropZoneEodsMedia0.getFirst().getId(), medias.getFirst().getId());
+        var rawFile1Name = format("%d_%d_1", armDropZoneEodsMedia1.getFirst().getId(), medias.get(1).getId());
 
         verify(armDataManagementApi, times(1)).copyBlobDataToArm(any(), eq(rawFile0Name));
         verify(armDataManagementApi, times(1)).copyBlobDataToArm(any(), eq(rawFile0Name));
         verify(armDataManagementApi, times(1)).saveBlobDataToArm(matches("DARTS_.+\\.a360"), any());
 
         verify(archiveRecordFileGenerator).generateArchiveRecords(manifestFileNameCaptor.capture(), any());
-
 
         ArgumentCaptor<String> manifestFileContentCaptor = ArgumentCaptor.forClass(String.class);
         verify(dataStoreToArmHelper).convertStringToBinaryData(manifestFileContentCaptor.capture());
@@ -379,68 +351,75 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
                       "\"dz_file_name\":\"" + rawFile1Name);
 
         String manifestFileName = manifestFileNameCaptor.getValue();
-        assertThat(armDropZoneEodsMedia0.get(0).getManifestFile()).isEqualTo(manifestFileName);
-        assertThat(armDropZoneEodsMedia0.get(0).getLastModifiedBy().getId()).isEqualTo(testUser.getId());
-        assertThat(armDropZoneEodsMedia0.get(0).getLastModifiedDateTime()).isCloseToUtcNow(within(1, SECONDS));
-        assertThat(armDropZoneEodsMedia1.get(0).getManifestFile()).isEqualTo(manifestFileName);
+        assertThat(armDropZoneEodsMedia0.getFirst().getManifestFile()).isEqualTo(manifestFileName);
+        assertThat(armDropZoneEodsMedia0.getFirst().getLastModifiedBy().getId()).isEqualTo(testUser.getId());
+        assertThat(armDropZoneEodsMedia0.getFirst().getLastModifiedDateTime()).isCloseToUtcNow(within(1, SECONDS));
+        assertThat(armDropZoneEodsMedia1.getFirst().getManifestFile()).isEqualTo(manifestFileName);
     }
 
     @Test
-    void movePreviousArmFailedFromUnstructuredToArmStorage() throws IOException {
+    void movePreviousArmFailedFromUnstructuredToArmStorage() {
 
         //given
         when(unstructuredToArmProcessorConfiguration.getMaxArmManifestItems()).thenReturn(5);
 
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), ARM_RAW_DATA_FAILED, ARM, eod -> eod.setTransferAttempts(2));
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), ARM_RAW_DATA_FAILED, ARM, eod -> eod.setTransferAttempts(2));
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), ARM_MANIFEST_FAILED, ARM);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(2), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(2), ARM_MANIFEST_FAILED, ARM, eod -> eod.setTransferAttempts(5));
         externalObjectDirectoryStub.createAndSaveEod(medias.get(3), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(3), ARM_RESPONSE_MANIFEST_FAILED, ARM, eod -> eod.setTransferAttempts(1));
+        externalObjectDirectoryStub.createAndSaveEod(medias.get(4), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.get(4), ARM_INGESTION, ARM, eod -> eod.setTransferAttempts(1));
+        externalObjectDirectoryStub.createAndSaveEod(medias.get(5), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.get(5), ARM_RAW_DATA_PUSHED, ARM, eod -> eod.setTransferAttempts(1));
 
         //when
-        unstructuredToArmProcessor.processUnstructuredToArm(5);
+        unstructuredToArmProcessor.processUnstructuredToArm(10);
 
         //then
-        verify(armDataManagementApi, times(1)).copyBlobDataToArm(any(), matches(".+_.+_"));
+        verify(armDataManagementApi, times(2)).copyBlobDataToArm(any(), matches(".+_.+_"));
         verify(armDataManagementApi, times(1)).saveBlobDataToArm(matches("DARTS_.+\\.a360"), any());
         verify(armDataManagementApi, times(1)).saveBlobDataToArm(any(), any());
 
-        var armDropzoneEodsMedia0 = eodRepository.findByMediaStatusAndType(medias.get(0), EodHelper.armDropZoneStatus(), EodHelper.armLocation());
+        var armDropzoneEodsMedia0 = eodRepository.findByMediaStatusAndType(medias.getFirst(), EodHelper.armDropZoneStatus(), EodHelper.armLocation());
         assertThat(armDropzoneEodsMedia0).hasSize(1);
         var armDropzoneEodsMedia1 = eodRepository.findByMediaStatusAndType(medias.get(1), EodHelper.armDropZoneStatus(), EodHelper.armLocation());
         assertThat(armDropzoneEodsMedia1).hasSize(1);
         var armDropzoneEodsMedia3 = eodRepository.findByMediaStatusAndType(medias.get(3), EodHelper.armDropZoneStatus(), EodHelper.armLocation());
         assertThat(armDropzoneEodsMedia3).hasSize(0);
-
+        var armDropzoneEodsMedia4 = eodRepository.findByMediaStatusAndType(medias.get(4), EodHelper.armDropZoneStatus(), EodHelper.armLocation());
+        assertThat(armDropzoneEodsMedia4).hasSize(1);
+        var armDropzoneEodsMedia5 = eodRepository.findByMediaStatusAndType(medias.get(5), EodHelper.armDropZoneStatus(), EodHelper.armLocation());
+        assertThat(armDropzoneEodsMedia5).hasSize(0);
 
         verify(archiveRecordFileGenerator).generateArchiveRecords(manifestFileNameCaptor.capture(), any());
         String manifestFileName = manifestFileNameCaptor.getValue();
-        assertThat(armDropzoneEodsMedia0.get(0).getManifestFile()).isEqualTo(manifestFileName);
-        assertThat(armDropzoneEodsMedia0.get(0).getLastModifiedBy().getId()).isEqualTo(testUser.getId());
-        assertThat(armDropzoneEodsMedia0.get(0).getLastModifiedDateTime()).isCloseToUtcNow(within(1, SECONDS));
-        assertThat(armDropzoneEodsMedia1.get(0).getManifestFile()).isEqualTo(manifestFileName);
+        assertThat(armDropzoneEodsMedia0.getFirst().getManifestFile()).isEqualTo(manifestFileName);
+        assertThat(armDropzoneEodsMedia0.getFirst().getLastModifiedBy().getId()).isEqualTo(testUser.getId());
+        assertThat(armDropzoneEodsMedia0.getFirst().getLastModifiedDateTime()).isCloseToUtcNow(within(1, SECONDS));
+        assertThat(armDropzoneEodsMedia1.getFirst().getManifestFile()).isEqualTo(manifestFileName);
 
         ArgumentCaptor<String> manifestFileContentCaptor = ArgumentCaptor.forClass(String.class);
         verify(dataStoreToArmHelper).convertStringToBinaryData(manifestFileContentCaptor.capture());
         String manifestFileContent = manifestFileContentCaptor.getValue();
-        assertThat(manifestFileContent.lines().count()).isEqualTo(4);
+        assertThat(manifestFileContent.lines().count()).isEqualTo(6);
         assertThat(manifestFileContent).contains(
-            format("_%d_", medias.get(0).getId()),
+            format("_%d_", medias.getFirst().getId()),
             format("_%d_", medias.get(1).getId())
         );
         assertThat(manifestFileContent).doesNotContain(format("_%d_", medias.get(2).getId()));
     }
 
     @Test
-    void movePreviousArmFailedWithNoCorrespondingUnstructuredFailsAndProcessingContinues() throws IOException {
+    void movePreviousArmFailedWithNoCorrespondingUnstructuredFailsAndProcessingContinues() {
 
         //given
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), ARM_MANIFEST_FAILED, ARM, eod -> eod.setManifestFile("existingManifestFile"));
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), ARM_MANIFEST_FAILED, ARM, eod -> eod.setManifestFile("existingManifestFile"));
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), ARM_RAW_DATA_FAILED, ARM);
 
@@ -449,10 +428,10 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //then
         List<ExternalObjectDirectoryEntity> failedArmEods = eodRepository.findByMediaStatusAndType(
-            medias.get(0), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
+            medias.getFirst(), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
         assertThat(failedArmEods).hasSize(1);
-        assertThat(failedArmEods.get(0).getManifestFile()).isEqualTo("existingManifestFile");
-        assertThat(failedArmEods.get(0).getTransferAttempts()).isEqualTo(2);
+        assertNull(failedArmEods.getFirst().getManifestFile());
+        assertThat(failedArmEods.getFirst().getTransferAttempts()).isEqualTo(2);
         assertThat(eodRepository.findByMediaStatusAndType(medias.get(1), EodHelper.armDropZoneStatus(), EodHelper.armLocation())).hasSize(1);
 
         verify(archiveRecordFileGenerator).generateArchiveRecords(manifestFileNameCaptor.capture(), any());
@@ -463,7 +442,7 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         assertThat(manifestFileContent.lines().count()).isEqualTo(2);
         assertThat(manifestFileContent).contains(format("_%d_", medias.get(1).getId()));
-        assertThat(manifestFileContent).doesNotContain(format("_%d_", medias.get(0).getId()));
+        assertThat(manifestFileContent).doesNotContain(format("_%d_", medias.getFirst().getId()));
     }
 
     @Test
@@ -471,8 +450,8 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //given
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), ARM_RAW_DATA_FAILED, ARM, eod -> {
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), ARM_RAW_DATA_FAILED, ARM, eod -> {
             eod.setManifestFile("existingManifestFile");
             eod.setTransferAttempts(2);
         });
@@ -485,15 +464,15 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
         unstructuredToArmProcessor.processUnstructuredToArm(5);
 
         //then
-        List<ExternalObjectDirectoryEntity> failedArmEods = eodRepository.findByMediaStatusAndType(medias.get(0), EodHelper.failedArmRawDataStatus(),
+        List<ExternalObjectDirectoryEntity> failedArmEods = eodRepository.findByMediaStatusAndType(medias.getFirst(), EodHelper.failedArmRawDataStatus(),
                                                                                                    EodHelper.armLocation());
         assertThat(failedArmEods).hasSize(1);
         List<ExternalObjectDirectoryEntity> ingestedArmEods = eodRepository.findByMediaStatusAndType(medias.get(1), EodHelper.armDropZoneStatus(),
                                                                                                      EodHelper.armLocation());
         assertThat(ingestedArmEods).hasSize(1);
-        var failedEod = failedArmEods.get(0);
+        var failedEod = failedArmEods.getFirst();
         assertThat(failedEod.getTransferAttempts()).isEqualTo(3);
-        assertThat(failedEod.getManifestFile()).isEqualTo("existingManifestFile");
+        assertNull(failedEod.getManifestFile());
     }
 
     @Test
@@ -504,8 +483,8 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //given
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), ARM_RAW_DATA_FAILED, ARM, eod -> eod.setManifestFile("existingManifestFile"));
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), ARM_RAW_DATA_FAILED, ARM, eod -> eod.setManifestFile("existingManifestFile"));
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), ARM_MANIFEST_FAILED, ARM);
 
@@ -516,14 +495,14 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //then
         List<ExternalObjectDirectoryEntity> failedArmEodsMedia0 = eodRepository.findByMediaStatusAndType(
-            medias.get(0), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
+            medias.getFirst(), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
         assertThat(failedArmEodsMedia0).hasSize(1);
         List<ExternalObjectDirectoryEntity> failedArmEodsMedia1 = eodRepository.findByMediaStatusAndType(
             medias.get(1), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
         assertThat(failedArmEodsMedia1).hasSize(1);
-        var failedEod = failedArmEodsMedia0.get(0);
+        var failedEod = failedArmEodsMedia0.getFirst();
         assertThat(failedEod.getTransferAttempts()).isEqualTo(2);
-        assertThat(failedEod.getManifestFile()).isEqualTo("existingManifestFile");
+        assertNull(failedEod.getManifestFile());
 
         verify(armDataManagementApi, never()).saveBlobDataToArm(matches("DARTS_.+\\.a360"), any());
     }
@@ -533,8 +512,8 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //given
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), ARM_RAW_DATA_FAILED, ARM, eod -> eod.setManifestFile("existingManifestFile"));
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), ARM_RAW_DATA_FAILED, ARM, eod -> eod.setManifestFile("existingManifestFile"));
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), ARM_MANIFEST_FAILED, ARM);
 
@@ -545,14 +524,14 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //then
         List<ExternalObjectDirectoryEntity> failedArmEodsMedia0 = eodRepository.findByMediaStatusAndType(
-            medias.get(0), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
+            medias.getFirst(), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
         assertThat(failedArmEodsMedia0).hasSize(1);
         List<ExternalObjectDirectoryEntity> failedArmEodsMedia1 = eodRepository.findByMediaStatusAndType(
             medias.get(1), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
         assertThat(failedArmEodsMedia1).hasSize(1);
-        var failedEod = failedArmEodsMedia0.get(0);
+        var failedEod = failedArmEodsMedia0.getFirst();
         assertThat(failedEod.getTransferAttempts()).isEqualTo(2);
-        assertThat(failedEod.getManifestFile()).isEqualTo("existingManifestFile");
+        assertNull(failedEod.getManifestFile());
 
         verify(armDataManagementApi, never()).saveBlobDataToArm(matches("DARTS_.+\\.a360"), any());
     }
@@ -562,8 +541,8 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //given
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), STORED, UNSTRUCTURED);
-        externalObjectDirectoryStub.createAndSaveEod(medias.get(0), ARM_RAW_DATA_FAILED, ARM, eod -> eod.setManifestFile("existingManifestFile"));
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), STORED, UNSTRUCTURED);
+        externalObjectDirectoryStub.createAndSaveEod(medias.getFirst(), ARM_RAW_DATA_FAILED, ARM, eod -> eod.setManifestFile("existingManifestFile"));
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), STORED, UNSTRUCTURED);
         externalObjectDirectoryStub.createAndSaveEod(medias.get(1), ARM_MANIFEST_FAILED, ARM);
 
@@ -574,13 +553,13 @@ class UnstructuredToArmBatchProcessorIntTest extends IntegrationBase {
 
         //then
         List<ExternalObjectDirectoryEntity> failedArmEodsMedia0 = eodRepository.findByMediaStatusAndType(
-            medias.get(0), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
+            medias.getFirst(), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
         assertThat(failedArmEodsMedia0).hasSize(1);
         List<ExternalObjectDirectoryEntity> failedArmEodsMedia1 = eodRepository.findByMediaStatusAndType(
             medias.get(1), EodHelper.failedArmManifestFileStatus(), EodHelper.armLocation());
         assertThat(failedArmEodsMedia1).hasSize(1);
-        var failedEod = failedArmEodsMedia0.get(0);
+        var failedEod = failedArmEodsMedia0.getFirst();
         assertThat(failedEod.getTransferAttempts()).isEqualTo(2);
-        assertThat(failedEod.getManifestFile()).isEqualTo("existingManifestFile");
+        assertNull(failedEod.getManifestFile());
     }
 }
